testsuite/tests/deriving/should_fail/deriving-via-fail.stderr

deriving-via-fail.hs:13:12: error: [GHC-63174]
    • Cannot derive instance via ‘fooo’
        Class ‘Category’ expects an argument of kind ‘* -> * -> *’,
        but ‘fooo’ has kind ‘*’
    • In the newtype declaration for ‘Foo2’
